--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta name="theme-color" content="#C3EEFF" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="nimi-card-version" content="%REACT_APP_VERSION%" />
     <title>Nimi</title>
     <style>
       * {
