fix: bring back noscript tag

--- a/public/index.html
+++ b/public/index.html
@@ -132,5 +132,6 @@
         </svg>
       </div>
     </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
